--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-  <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="stylesheet" href="public/assets/styles.css" />
 </head>
 <body>
-  <div id="toolbar">123</div>
-	<script src="assets/bundle.js"></script>
+  <div id="toolbar">12344</div>
+	<script src="public/assets/bundle.js"></script>
 </body>
 </html>
