--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
-  <div id="toolbar">12344</div>
+  <div id="layout"></div>
 	<script src="assets/bundle.js"></script>
 </body>
 </html>
