--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
 <head>
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
-<body>***
-  <div id="toolbar">123</div>
+<body>
 	<script src="assets/bundle.js"></script>
 </body>
 </html>
